--- a/css/style.css
+++ b/css/style.css
@@ -884,7 +884,7 @@ img {
   background-color: #EC1F46;
 }
 
-.map {
+.map, #map {
   width: 347px;
   height: 213px;
   -webkit-border-radius: 10px;
@@ -892,7 +892,7 @@ img {
   overflow: hidden;
 }
 
-.map-frame {
+.map-frame, #map-frame {
   width: 100%;
   height: 100%;
   border: none;
@@ -908,6 +908,7 @@ img {
   .swiper-slide__pic {
     width: 100%;
     height: 100%;
+    min-height: unset;
   }
 }
 
@@ -1090,6 +1091,7 @@ img {
   }
   .hotel-grid {
     max-width: 278px;
+    padding-top: 18px;
   }
   .hotel-right {
     min-height: 403px;
@@ -1111,7 +1113,7 @@ img {
     width: 279px;
     height: 210px;
   }
-  .map {
+  .map, #map {
     width: 280px;
     height: 172px;
   }
