--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,6 +8,7 @@
       &__pic
         width: 100%
         height: 100%
+        min-height: unset
 @media screen and ( max-width: 992px )
   .container
     max-width: 700px
@@ -117,6 +118,7 @@
   .hotel
     &-grid
       max-width: 278px
+      padding-top: 18px
     &-right
       min-height: 403px
   .slider
@@ -131,6 +133,6 @@
   .booking
     width: 279px
     height: 210px
-  .map
+  .map, #map
     width: 280px
     height: 172px
