--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -174,7 +174,7 @@
     border: none
     color: $light
     background-color: $primary
-.map, #map
+.map
   width: 347px
   height: 213px
   border-radius: 10px
